--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>New Repo</title>
 </head>
 <body>
-    <P>This is my new Repository</P>
+    <header>
+        <h1>This is heading</h1>
+    </header>
+    <main>
+        <P>This is my new Repository</P>
+    </main>
+    <footer>
+        <h6>This is footer</h6>
+    </footer>
 </body>
 </html>
